[gd_scene load_steps=41 format=3 uid="uid://broj86uh4bw0d"]

[ext_resource type="PackedScene" uid="uid://csohifpc4ffbj" path="res://BaseGameObjects/Inventory/CombatItems/Guns/Gun.tscn" id="1_48yxw"]
[ext_resource type="Script" path="res://Content/Demo/Code/Items/Weapons/TheBackup/TheBackup.gd" id="2_w3k00"]
[ext_resource type="PackedScene" uid="uid://bveo47i8m3j3g" path="res://Content/Demo/Assets/Weapons/TheBackup/BackupPistolModel.tscn" id="3_houvg"]
[ext_resource type="Texture2D" uid="uid://nudybs2x4dlc" path="res://Content/Demo/Assets/Weapons/TheBackup/BackupPistolInventoryImage.png" id="3_l6kjb"]
[ext_resource type="PackedScene" uid="uid://cfmjnswr2bn8j" path="res://Content/Demo/Code/Items/Weapons/TheBackup/TheBackupMagazine.tscn" id="4_vwx1n"]
[ext_resource type="PackedScene" uid="uid://dcd827env45l2" path="res://Content/Demo/Assets/Weapons/TheBackup/BackupPistolGroundModel.tscn" id="5_mn8uy"]
[ext_resource type="Script" path="res://BaseGameObjects/RPGMechanics/RPGTags.gd" id="6_g8ykp"]
[ext_resource type="Script" path="res://UIObjects/InventoryUI/ItemDescription/ItemStatEntryCollection.gd" id="6_vjkbf"]
[ext_resource type="PackedScene" uid="uid://dkqcr854w5h5r" path="res://BaseGameObjects/SoundMaster.tscn" id="8_h73h2"]
[ext_resource type="Script" path="res://UIObjects/InventoryUI/ItemDescription/ItemStatEntry.gd" id="8_rhqki"]
[ext_resource type="AudioStream" uid="uid://cnhor7kjcshos" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire1-001.wav" id="9_llagl"]
[ext_resource type="AudioStream" uid="uid://bru623sjul5d" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire1-002.wav" id="10_uainf"]
[ext_resource type="AudioStream" uid="uid://bydiwmouobf3" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire1-003.wav" id="11_xpfy4"]
[ext_resource type="AudioStream" uid="uid://iccr66ali4hp" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire1-004.wav" id="12_m25xo"]
[ext_resource type="AudioStream" uid="uid://dn5lyemmo3sbu" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire2-001.wav" id="13_q8atk"]
[ext_resource type="AudioStream" uid="uid://wlh74xy1ttja" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_select-fire-001.wav" id="13_s4vt0"]
[ext_resource type="AudioStream" uid="uid://4mhrqv37cxo0" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire2-002.wav" id="14_brfct"]
[ext_resource type="AudioStream" uid="uid://capaqsuofhmto" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_mag-eject-001.wav" id="14_sotyg"]
[ext_resource type="AudioStream" uid="uid://dlo51plafpmia" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire2-003.wav" id="15_87bo7"]
[ext_resource type="AudioStream" uid="uid://c3sb6gibrybee" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_mag-insert-001.wav" id="15_erelv"]
[ext_resource type="AudioStream" uid="uid://we7vebauqiur" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_mag-insert-002.wav" id="16_ei8y7"]
[ext_resource type="AudioStream" uid="uid://dutyuucjbhqek" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire2-004.wav" id="16_s2roj"]
[ext_resource type="AudioStream" uid="uid://dxrtyglau3hjr" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire3-001.wav" id="17_pugbt"]
[ext_resource type="AudioStream" uid="uid://cqy3sbmckdgo6" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire3-002.wav" id="18_s2swv"]
[ext_resource type="AudioStream" uid="uid://c656hpsgu62m6" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire3-003.wav" id="19_f2t6u"]
[ext_resource type="AudioStream" uid="uid://d1gok0wk3dewf" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire3-004.wav" id="20_p4uht"]
[ext_resource type="AudioStream" uid="uid://cps4tt330xwh" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_dry-fire-001.wav" id="25_1vbgq"]

[sub_resource type="Resource" id="Resource_b5ubm"]
script = ExtResource("8_rhqki")
stat_title = "Damage"
stat_value = "4"
stat_value_colour = Color(0.641577, 0.088861, 0.157988, 1)

[sub_resource type="Resource" id="Resource_7vngt"]
script = ExtResource("8_rhqki")
stat_title = "Capacity"
stat_value = "12"
stat_value_colour = Color(0.572335, 0.429194, 0.0976343, 1)

[sub_resource type="Resource" id="Resource_ermdj"]
script = ExtResource("8_rhqki")
stat_title = "Reload Spd."
stat_value = "2.0 s"
stat_value_colour = Color(0.572335, 0.429194, 0.0976343, 1)

[sub_resource type="Resource" id="Resource_plvch"]
script = ExtResource("8_rhqki")
stat_title = "Handling"
stat_value = "Good"
stat_value_colour = Color(0.0829862, 0.496847, 0.688897, 1)

[sub_resource type="Resource" id="Resource_whsdg"]
script = ExtResource("8_rhqki")
stat_title = "Accuracy"
stat_value = "Good"
stat_value_colour = Color(0.0829862, 0.496847, 0.688897, 1)

[sub_resource type="Resource" id="Resource_lclnd"]
script = ExtResource("8_rhqki")
stat_title = "Recoil"
stat_value = "Low"
stat_value_colour = Color(0.0823529, 0.498039, 0.690196, 1)

[sub_resource type="Resource" id="Resource_5okfc"]
script = ExtResource("8_rhqki")
stat_title = "Mode"
stat_value = "Semi"
stat_value_colour = Color(0.662452, 0.662452, 0.662452, 1)

[sub_resource type="Resource" id="Resource_mh7ja"]
script = ExtResource("8_rhqki")
stat_title = "Special"
stat_value = "Burst"
stat_value_colour = Color(0.662745, 0.662745, 0.662745, 1)

[sub_resource type="Resource" id="Resource_k7xqu"]
script = ExtResource("6_vjkbf")
stat_entry_array = Array[ExtResource("8_rhqki")]([SubResource("Resource_b5ubm"), SubResource("Resource_7vngt"), SubResource("Resource_ermdj"), SubResource("Resource_plvch"), SubResource("Resource_whsdg"), SubResource("Resource_lclnd"), SubResource("Resource_5okfc"), SubResource("Resource_mh7ja")])

[sub_resource type="Resource" id="Resource_7urdx"]
script = ExtResource("6_g8ykp")
tags = Array[String](["pistol"])

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hicjr"]
random_pitch = 1.1
streams_count = 4
stream_0/stream = ExtResource("9_llagl")
stream_1/stream = ExtResource("10_uainf")
stream_2/stream = ExtResource("11_xpfy4")
stream_3/stream = ExtResource("12_m25xo")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fsqmx"]
random_pitch = 1.1
streams_count = 4
stream_0/stream = ExtResource("13_q8atk")
stream_1/stream = ExtResource("14_brfct")
stream_2/stream = ExtResource("15_87bo7")
stream_3/stream = ExtResource("16_s2roj")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_atcdh"]
streams_count = 4
stream_0/stream = ExtResource("17_pugbt")
stream_1/stream = ExtResource("18_s2swv")
stream_2/stream = ExtResource("19_f2t6u")
stream_3/stream = ExtResource("20_p4uht")

[node name="TheBackup" instance=ExtResource("1_48yxw")]
script = ExtResource("2_w3k00")
shots_per_burst_semi = 1
shots_per_burst_burst = 3
base_spread_semi = 0.05
base_spread_burst = 0.15
time_between_shots_semi = 0.1
time_between_shots_burst = 0.4
time_between_shots = 0.1
time_between_burst_shots = 0.038
recoil_per_shot = 0.2
movement_spread_gain_per_second = 0.2
movement_spread_recovery_per_second = 1.8
maximum_movement_spread = 0.3
maximum_walking_movement_spread = 0.05
screen_shake_on_fire_amount = 0.03
gunshot_screen_flash_amount = 0.1
gunshot_screen_flash_duration = 0.05
low_ammo_amount = 5
critical_ammo_amount = 2
weapon_pose = "pistol"
weapon_model_scene = ExtResource("3_houvg")
inventory_image = ExtResource("3_l6kjb")
ground_3d_model_scene = ExtResource("5_mn8uy")
display_name = "The Backup"
item_id = "backup_pistol"
player_pose = "pistol"
description = "Widely regarded among both state and corporate security forces as a dependable, if perhaps underpowered sidearm. Its compact size and plentiful ammunition make it a great \"Backup\" weapon, or as a primary for dedicated loot runs in less dangerous areas.

Alt fire swaps between semi-auto and burst fire modes

Chambered in Parabellum Ammunition"
default_price = 250
item_stat_entry_collection = SubResource("Resource_k7xqu")
rpg_tags = SubResource("Resource_7urdx")
grid_square_width = 2
grid_square_height = 1

[node name="TheBackupMagazine" parent="." index="0" instance=ExtResource("4_vwx1n")]

[node name="ReloadMaster" parent="." index="1"]
max_reload_time = 2.0

[node name="SoundMaster" parent="." index="2" instance=ExtResource("8_h73h2")]

[node name="FireHigh" type="AudioStreamPlayer" parent="SoundMaster" index="0"]
stream = SubResource("AudioStreamRandomizer_hicjr")
bus = &"Gun Fire"

[node name="FireLow" type="AudioStreamPlayer" parent="SoundMaster" index="1"]
stream = SubResource("AudioStreamRandomizer_fsqmx")
bus = &"Gun Fire"

[node name="FireCritical" type="AudioStreamPlayer" parent="SoundMaster" index="2"]
stream = SubResource("AudioStreamRandomizer_atcdh")
pitch_scale = 1.1
bus = &"Gun Fire"

[node name="SelectFire" type="AudioStreamPlayer" parent="SoundMaster" index="3"]
stream = ExtResource("13_s4vt0")
volume_db = -3.267
bus = &"Gun Other"

[node name="MagEject" type="AudioStreamPlayer" parent="SoundMaster" index="4"]
stream = ExtResource("14_sotyg")
bus = &"Gun Other"

[node name="MagInsert" type="AudioStreamPlayer" parent="SoundMaster" index="5"]
stream = ExtResource("15_erelv")
bus = &"Gun Other"

[node name="MagInsertPerfect" type="AudioStreamPlayer" parent="SoundMaster" index="6"]
stream = ExtResource("16_ei8y7")
bus = &"Gun Other"

[node name="DryFire" type="AudioStreamPlayer" parent="SoundMaster" index="7"]
stream = ExtResource("25_1vbgq")
volume_db = -4.357
bus = &"Gun Other"
